# Ascan_old

./: .gitignore  .qmake.stash  AppManager.cpp  AppManager.h  Ascan_1.pro  CMakeLists.txt  CMakeLists.txt.bak  IOLCalculator.h  Makefile  adddoctordialog.cpp  adddoctordialog.h  adddoctordialog.ui  addlensdialog.cpp  addlensdialog.h  addlensdialog.ui  addpatientdialog.cpp  addpatientdialog.h  addpatientdialog.ui  calculatordialog.cpp  calculatordialog.h  calculatordialog.ui  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  clock.ui  dialog.ui  doctordetaildialog.cpp  doctordetaildialog.h  doctordetaildialog.ui  editdoctordialog.cpp  editdoctordialog.h  editdoctordialog.ui  editlensdialog.cpp  editlensdialog.h  editlensdialog.ui  editpatientdialog.cpp  editpatientdialog.h  editpatientdialog.ui  fixedcombobox.h  homescreendialog.cpp  (+82 more)
Services/: adddoctordialog.h
backup_generated/: moc_adddoctordialog.cpp  moc_addpatientdialog.cpp  moc_calculatordialog.cpp  moc_calibrationdialog.cpp  moc_editlensdialog.cpp  moc_fixedcombobox.cpp  moc_homescreendialog.cpp  moc_numericpad.cpp  moc_patientdetaildialog.cpp  moc_printdialog.cpp  moc_viewpatientdialog.cpp  ui_adddoctordialog.h  ui_addlensdialog.h  ui_addpatientdialog.h  ui_calculatordialog.h  ui_calibrationdialog.h  ui_clock.h  ui_doctordetaildialog.h  ui_editdoctordialog.h  ui_editlensdialog.h  ui_editpatientdialog.h  ui_homescreendialog.h  ui_keypad.h  ui_measuredialog.h  ui_numericpad.h  ui_patientdetaildialog.h  ui_preferencesdialog.h  ui_printdialog.h  ui_promptdialog.h  ui_viewdoctordialog.h  ui_viewlensdialog.h  ui_viewpatientdialog.h  ui_welcomedialog.h
build_Qt5/: Makefile  moc_adddoctordialog.cpp  moc_addlensdialog.cpp  moc_addpatientdialog.cpp  moc_calculatordialog.cpp  moc_calibrationdialog.cpp  moc_doctordetaildialog.cpp  moc_editdoctordialog.cpp  moc_editlensdialog.cpp  moc_editpatientdialog.cpp  moc_fixedcombobox.cpp  moc_homescreendialog.cpp  moc_keypad.cpp  moc_measuredialog.cpp  moc_numericpad.cpp  moc_patientdetaildialog.cpp  moc_preferencesdialog.cpp  moc_printdialog.cpp  moc_promptdialog.cpp  moc_qcustomplot.cpp  moc_viewdoctordialog.cpp  moc_viewlensdialog.cpp  moc_viewpatientdialog.cpp  moc_welcomedialog.cpp  ui_adddoctordialog.h  ui_addlensdialog.h  ui_addpatientdialog.h  ui_calculatordialog.h  ui_calibrationdialog.h  ui_clock.h  ui_dialog.h  ui_doctordetaildialog.h  ui_editdoctordialog.h  ui_editlensdialog.h  ui_editpatientdialog.h  ui_homescreendialog.h  ui_keypad.h  ui_measuredialog.h  ui_numericpad.h  ui_patientdetaildialog.h  (+7 more)
